crates/vespertide-query/src/snapshots/vespertide_query__builder__tests__delete_column_after_create_table_with_inline_index@inline_index_mysql.snap
---
source: crates/vespertide-query/src/builder.rs
expression: sql
---
ALTER TABLE `users` DROP COLUMN `email`
