crates/vespertide-query/src/snapshots/vespertide_query__builder__tests__delete_column_after_create_table_with_inline_unique@inline_unique_postgres.snap
---
source: crates/vespertide-query/src/builder.rs
expression: sql
---
ALTER TABLE "gift" DROP COLUMN "gift_code"
