crates/vespertide-query/src/snapshots/vespertide_query__builder__tests__delete_column_after_create_table_with_inline_unique@inline_unique_sqlite.snap
---
source: crates/vespertide-query/src/builder.rs
expression: sql
---
DROP INDEX "uq_gift__gift_code";
ALTER TABLE "gift" DROP COLUMN "gift_code"
